--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.address=127.0.0.1
+server.port=8888
+server.error.whitelabel.enabled=false
+server.tomcat.accesslog.enabled=true
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/lifebeat
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.max-active=5
+spring.datasource.tomcat.test-on-borrow=true
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create
+
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
